2022-04-30  Fojtik Jaroslav  <JaFojtik@yandex.com>

        * coders/jpeg.c: Optionally enable arithmetic coder in JPG images.
	gm convert -define jpeg:arithmetic=true testimg.jpg arith.jpg

2022-04-27  Fojtik Jaroslav  <JaFojtik@yandex.com>

        * jpeg/: Update aged JPG library to version 9d.

2022-04-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/ps.c (ReadPSImage): Assure that 'bounds' structure is
        initialized.

        * coders/ept.c (ReadEPTImage): Assure that 'bounds' structure is
        initialized.

        * magick/log.c (IsEventLogged): New function to report if a
        particular event will be logged.  Us this as much as possible
        throughout the software to replace use of IsEventLogging().

        * coders/png.c (ReadMNGImage): Address oss-fuzz 46913
        "graphicsmagick:coder_WPG_fuzzer: Indirect-leak in
        MagickMallocCleared" which was partially pre-existing and
        partially due to a botched fix for oss-fuzz 46843.

2022-04-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/png.c (ReadMNGImage): Address oss-fuzz 46843
        "graphicsmagick:enhance_fuzzer: Heap-use-after-free in CloseBlob".

2022-04-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/{msl.c, svg.c, url.c}: When __MINGW32__ is defined, then
        only define _MSC_VER if it is not already defined.  Also define
        _MSC_VER with a somewhat useful value.  This change is prompted by
        a posting by "LM" to the graphicsmagick-core list on April 17,
        2022.

2022-04-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/png.c (ReadOnePNGImage): Make sure that ping_num_trans is
        initialized.  Fixes oss-fuzz 46760 "Use-of-uninitialized-value -
        ReadOnePNGImage".

2022-04-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * magick/blob.c (OpenBlob): Allocate setvbuf() buffer externally