@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020220423"
-#define public MagickPackageReleaseDate "snapshot-20220423"
+#define public MagickPackageVersionAddendum ".020220502"
+#define public MagickPackageReleaseDate "snapshot-20220502"
